Nemat/metric service (#81)
* Refactor settings popup to use ContextMenu and update related UI components

* Refactor settings popup to use ContextMenu and update related UI components

* Disabled depth limit for manual addition

* Disabled depth limit for manual addition

* Fixed minor ui bug with contextmenu. Refactored other ui components.

* Fixed minor ui bug with contextmenu. Refactored other ui components.

* Refactor main screen layout to use SplitPane for better UI organization and add styles for new components

* Process monitoring and metrics service

* Logs monitoring

* Refactor process handling for improved concurrency and safety

* Apply changes to the codebase including file relocations and modifications

* Open in explorer

* Project ordering

* Project filtering

* Fix filtering

* Refactor scroll bar styles

* Add JaCoCo plugin and configure test coverage verification; update project dependencies

* Add JaCoCo plugin and configure test coverage verification; update project dependencies

* Project vision

* Project vision

* 5w + raci

* 5w + raci

* Update ProjectVision.md

* Update ProjectVision.md

* CR

* Logging service for user

* BackendTestBase

* Metrix

* patch commit

* history update

* Notifications

* Resolve conflicts

* Fix conflicts

* init commit for tests

* Scan cancelling

* merge main

* tooltip for a project path

* Stop and run

* Optimization

* Optimization

* Tests fix

* notification about project stop

* Refactor UI components for stop and run buttons; update styles and layout

* Refactor Logs and Metrics Panel UI and improve icon handling

* Merged /feature/design with /feature/run-project

* Fixed bug with openInExplorer causing application freezes

* Enhance Logs and Metrics Panel with process tracking and UI updates

* Refactor process logging and metrics handling with OSProcessWrapper

* ProcessWrapper

* serr -> logger

* Cleanup

* Refactor process logging to improve performance

* Refactor process logging to impr